# mini-gandalf

./: .dockerignore  .gitignore  Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml
app/: app.py  config.py  levels.py  llm.py  vdb.py
prompts/: level_1.yml  level_2.yml  level_3.yml  level_4.yml  level_5.yml  level_6.yml  level_7.yml  level_8.yml
scripts/: train_input_classifier.py
